# embedded-template-stm32

./: .cspell.project-words.txt  .editorconfig  .env.base  .env.repo  .gitignore  .terraform_init  CMakeLists.txt  LICENSE  Makefile  README.md  stm32f4xx_hal_conf.h  udev.sh
.github/: CODEOWNERS
.github/workflows/: autoupdate.yml  nightly.yml  release.yml  stm32_ci.yml
.make/: st.mk
docs/: conops.md
src/: main.c  main.h
