cmake_minimum_required(VERSION 3.16)
set(PROJECT_NAME $ENV{PROJECT_NAME})
set(CMAKE_BUILD_DIRECTORY build/)
set(CMAKE_TOOLCHAIN_FILE $ENV{STM32_CMAKE_PATH}/stm32_gcc.cmake)
set(STM32_COMPONENT "STM32$ENV{STM32_MCU}")
set(CMAKE_C_COMPILER $ENV{STM32_TOOLCHAIN_PATH}/arm-none-eabi-gcc)
set(CMAKE_ASM_COMPILER ${CMAKE_C_COMPILER})

message(PROJECT_NAME=$ENV{PROJECT_NAME})
message(STM32_MCU=$ENV{STM32_MCU})
message(STM32_COMPONENT=${STM32_COMPONENT})
message(STM32_CMAKE_PATH=$ENV{STM32_CMAKE_PATH})
message(C_COMPILER=$ENV{STM32_TOOLCHAIN_PATH}/arm-none-eabi-gcc)

project(${PROJECT_NAME} C ASM)

find_package(CMSIS COMPONENTS ${STM32_COMPONENT} REQUIRED)

set(PROJECT_SOURCES
    src/main.c
)

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
target_link_libraries(${PROJECT_NAME}
    CMSIS::STM32::$ENV{STM32_MCU}
    # STM32::NoSys
)

stm32_print_size_of_target(${PROJECT_NAME})
